<resources>
    <string name="app_name">WithBash</string>
    <!--    Register Activity Strings-->
    <string name="create_new_account">Create New Account</string>
    <string name="full_name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="register_button">REGISTER</string>
    <string name="registertext">Already Registered ? Login Here</string>

    <!--    Login Activity Strings-->
    <string name="login_here">Login Here</string>
    <string name="login_button">LOGIN</string>
    <string name="logintext">New Here ? Create Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_name">Event Name</string>
    <string name="description">Description</string>
    <string name="list_view">View</string>
    <string name="todo">TODO</string>
    <string name="withbash">WithBash</string>
    <string name="best_artist">Best Artist</string>
    <string name="events">Events</string>


    <array name="Packages">
        <item>Package 1</item>
        <item>Package 2</item>
        <item>Package 3</item>
    </array>
    <array name="EventName">
        <item>Birthday</item>
        <item>Wedding</item>
        <item>Anniversary</item>
        <item>Proposals</item>
    </array>

    <string name="title_activity_event_info">Event_info</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

</resources>