<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".Register">

    <TextView
        android:id="@+id/apphead1"
        android:layout_width="167dp"
        android:layout_height="80dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/bangers"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="46sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/registerhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/create_new_account"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apphead1" />

    <EditText
        android:id="@+id/fullname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:autofillHints=""
        android:background="@color/colorDark"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textColorHint="@color/colorLightText"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerhead" />

    <EditText
        android:id="@+id/reg_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:autofillHints=""
        android:background="@color/colorDark"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName|textEmailAddress"
        android:padding="5dp"
        android:textColorHint="@color/colorLightText"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullname" />

    <EditText
        android:id="@+id/reg_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:autofillHints=""
        android:background="@color/colorDark"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:padding="5dp"
        android:textColorHint="@color/colorLightText"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_email" />

    <EditText
        android:id="@+id/reg_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:autofillHints=""
        android:background="@color/colorDark"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName|textPassword"
        android:padding="5dp"
        android:textColorHint="@color/colorLightText"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_phone" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="273dp"
        android:layout_height="43dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/primary_btn"
        android:text="@string/register_button"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_password" />

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/registertext"
        android:textColor="@color/colorLightText"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_btn" />

    <ProgressBar
        android:id="@+id/reg_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_text" />




</androidx.constraintlayout.widget.ConstraintLayout>