<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".Login">


    <TextView
        android:id="@+id/apphead"
        android:layout_width="191dp"
        android:layout_height="87dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/bangers"
        android:rotation="0"
        android:rotationX="0"
        android:rotationY="0"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="83dp"
        android:text="@string/login_here"
        android:textColor="#EFE9E9"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apphead" />

    <EditText
        android:id="@+id/log_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:autofillHints=""
        android:background="@color/colorDark"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName|textEmailAddress"
        android:padding="5dp"
        android:textColorHint="#8C8989"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginhead" />

    <EditText
        android:id="@+id/log_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:autofillHints=""
        android:background="@color/colorDark"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName|textPassword"
        android:padding="5dp"
        android:textColorHint="#8C8989"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_email" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/primary_btn"
        android:text="@string/login_button"
        android:textColor="#453C3C"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_password" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/logintext"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    <ProgressBar
        android:id="@+id/log_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_text"
        app:layout_constraintVertical_bias="0.398" />


</androidx.constraintlayout.widget.ConstraintLayout>