<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="16dp"
    android:background="@drawable/dark_bg"
    >



    <androidx.cardview.widget.CardView
        android:id="@+id/event_card"
        app:cardCornerRadius="6dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.flaviofaria.kenburnsview.KenBurnsView
            android:id="@+id/kbvlocation"
            android:layout_width="match_parent"
            android:layout_height="130dp">
        </com.flaviofaria.kenburnsview.KenBurnsView>

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/image_cover_view"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@drawable/image_cover"
        android:translationZ="10dp"
        app:layout_constraintBottom_toBottomOf="@id/event_card"
        app:layout_constraintEnd_toEndOf="@id/event_card"
        app:layout_constraintStart_toStartOf="@id/event_card" />

    <TextView
        android:id="@+id/list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/crimson_text"
        android:text="@string/event_name"
        android:textColor="@color/colorPrimary"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_card" />

    <TextView
        android:id="@+id/list_desc"
        android:layout_width="175dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/work_sans_thin"
        android:text="@string/description"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_title"
        app:lineHeight="28dp" />

    <Button
        android:id="@+id/list_btn"
        android:layout_width="125dp"
        android:layout_height="41dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/primary_btn"
        android:fontFamily="@font/crimson_text"
        android:padding="2dp"
        android:text="@string/list_view"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_title" />

</androidx.constraintlayout.widget.ConstraintLayout>