<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.Home"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/home_page_title"
        android:layout_width="127dp"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/bangers"
        android:text="@string/withbash"
        android:textColor="@color/colorPrimary"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/locationViewPager"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:paddingStart="45dp"
        android:paddingEnd="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_page_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="6dp"
        android:layout_marginTop="315dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Events">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/Artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="6dp"
        android:background="@color/colorDark"
        android:text="@string/best_artist"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/locationViewPager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_page_title" />

    <TextView
        android:id="@+id/Events"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@color/colorDark"
        android:text="@string/events"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationViewPager" />


</androidx.constraintlayout.widget.ConstraintLayout>